--- a/app/packages/render/package.json
+++ b/app/packages/render/package.json
@@ -22,13 +22,14 @@
         "micromark": "^3.1.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-error-boundary": "^4.0.9",
         "react-helmet": "^6.1.0",
         "react-redux": "^8.0.5",
+        "react-transition-group": "^4.4.5",
         "theme-change": "^2.5.0",
         "uuid": "^9.0.0"
     },
     "devDependencies": {
-        "types": "link:../types",
         "@storybook/addon-essentials": "^7.0.12",
         "@storybook/addon-interactions": "^7.0.12",
         "@storybook/addon-links": "^7.0.12",
@@ -41,6 +42,7 @@
         "@types/react": "^18.0.28",
         "@types/react-dom": "^18.0.11",
         "@types/react-helmet": "^6.1.6",
+        "@types/react-transition-group": "^4.4.6",
         "@types/uuid": "^9.0.1",
         "@typescript-eslint/eslint-plugin": "^5.57.1",
         "@typescript-eslint/parser": "^5.57.1",
@@ -54,6 +56,7 @@
         "prop-types": "^15.8.1",
         "storybook": "^7.0.12",
         "tailwindcss": "^3.3.2",
+        "types": "link:../types",
         "typescript": "^5.0.2",
         "vite": "^4.3.2"
     }
