--- a/app/packages/plugins/models/chat-gpt-3/package.json
+++ b/app/packages/plugins/models/chat-gpt-3/package.json
@@ -5,12 +5,16 @@
     "main": "dist/index.js",
     "scripts": {
         "build": "tsc",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "jest"
     },
     "author": "Ruta Tang",
     "license": "MIT",
     "devDependencies": {
+        "@types/jest": "^29.5.2",
         "@types/node": "^20.2.5",
+        "dotenv": "^16.1.4",
+        "jest": "^29.5.0",
+        "ts-jest": "^29.1.0",
         "types": "link:../../../types",
         "typescript": "^5.1.3"
     },
