--- a/app/packages/main/package.json
+++ b/app/packages/main/package.json
@@ -28,6 +28,7 @@
     "dependencies": {
         "@types/pouchdb": "^6.4.0",
         "chatgpt": "^5.2.4",
+        "class-transformer": "^0.5.1",
         "electron-squirrel-startup": "^1.0.0",
         "openai": "^3.2.1",
         "pouchdb": "^8.0.1",
